--- a/style.css
+++ b/style.css
@@ -8,16 +8,15 @@
 .body{
   font-family: Inter;
 }
-
-
-
-
-
-
-
-
-
-
+.container{
+  max-width: 1312px;
+  width: 100%;
+  outline: solid red;
+  margin-left: auto;
+  margin-right: auto;
+padding-left: 16px;
+padding-right: 16px;
+}
 .btn {
   color: var(--aczent-color);
   font-family: Sen;
