--- a/style.css
+++ b/style.css
@@ -120,17 +120,32 @@
   padding-right: 48px;
   padding-left: 48px;
 }
-.post-container {
-  display: flex;
+.post-section{
+  padding-top: 128px;
+padding-bottom:128px ;
 
 }
+.post-container {
+  display: flex;
+gap: 32px;
+
+}
+.post-subbox{
+  outline: solid black;
+  max-width: 733px;
+  padding-left:32px ;
+  padding-right:32px ;
+  padding-top: 32px;
+  padding-bottom:32px ;
+}
 .post-info {
-  color: c;
+  color: var(--aczent-color);
   font-family: Sen;
   font-size: 28px;
   font-weight: 700;
   line-height: 40px;
   letter-spacing: -1px;
+  margin-bottom: 16px;
 }
 .post-title {
   color: var(--aczent-color);
@@ -147,19 +162,38 @@
   font-weight: 700;
   line-height: 32px;
 }
+.post-item{
+  max-width: 517px;
+  outline: solid seagreen;
+  padding-top: 32px;
+  padding-bottom:25px ;
+  padding-left:32px ;
+  padding-right: 32px;
+}
 .post-date {
   color: var(--text-color);
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+  margin-bottom: 16px;
+
 }
 .post-text {
   color: var(--text-color);
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
+
+}
+.post-button{
+  margin-top: 32px;
+  padding-top: 16px;
+  padding-bottom:16px ;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 .info-box {
+
 }
 .info-subtitle {
   color: var(--aczent-color);
@@ -205,6 +239,12 @@
   font-weight: 700;
   line-height: 32px;
 }
+
+.plan-box{
+ 
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
 .plan-title {
   color: var(--aczent-color);
   font-family: Sen;
@@ -212,6 +252,12 @@
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -2px;
+margin-left: auto;
+margin-right: auto;
+}
+.plan-list{
+  display: flex;
+  gap: 32px;
 }
 .plan-subtitle {
   color: var(--aczent-color);
