--- a/style.css
+++ b/style.css
@@ -286,7 +286,14 @@ margin-left: auto;
 }
 .plan-article{
 border: 1px solid  rgba(109, 110, 118, 0.3);
-
+ padding-top: 32px ;
+  padding-right: 32px ;
+  padding-bottom: 16px ;
+  padding-left: 32px ;
+}
+.plan-article:hover{
+  background-color:var(--btn) ;
+ 
 }
 .plan-subtitle {
   color: var(--aczent-color);
@@ -399,7 +406,20 @@ height: 584px;
   display: flex;
   gap: 73px;
 }
-
+.article-section{
+ background-color: #FBF6EA;
+}
+.article-box{
+  display: flex;
+  
+}
+.article-article{
+ margin-left: 112px;
+margin-right: 180px;
+}
+.article-subarticle{
+  margin-right: 111px;
+}
 .article-title {
   color: var(--aczent-color);
   font-family: Sen;
@@ -407,6 +427,15 @@ height: 584px;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -2px;
+  width: 345px;
+}
+.article-text{
+width: 349px;
+
+}
+.article-subtitle{
+margin-top: 92px;
+margin-bottom: 12px;
 }
 .article-subtext {
   color: var(--aczent-color);
@@ -414,8 +443,15 @@ height: 584px;
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
+  width:469px ;
+  margin-top: 80px;
+  margin-bottom: 121px;
 }
+.article-photo{
+  width:48px ;
+  height: 48px;
 
+}
 .join-box {
   height: 512px;
 }
