--- a/style.css
+++ b/style.css
@@ -467,6 +467,10 @@
   margin-bottom: 20px;
   text-align: center;
 }
+.authors-icon{
+width: 16px;
+height: 16px;
+}
 .logo-section {
   padding-top: 70px;
   padding-bottom: 96px;
