--- a/posts.css
+++ b/posts.css
@@ -4,6 +4,33 @@
   --subtitle-color: #592ea9;
 }
 
+/* Скинемо вбудовані стилі */
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0
+}
+
+ul {
+  list-style: none;
+  padding: 0 ;
+  margin: 0 ;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  /* background-color: transparent; */
+}
+
+
+
+
+/* Задамо стилі згідно макету */
+
 body {
   font-family: "Inter", sans-serif;
   color: var(--title-color);
